# iptvTicketRouting

./: Dockerfile  README.md  pyproject.toml
app/: main.py
scripts/: evaluate.py  train.py
src/iptv_ticket_router/: __init__.py  api.py  cli.py  config.py  feature.py  logging_conf.py  model.py  routing.py  runtime_metrics.py  text_preprocess.py
src/iptv_ticket_router.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_smoke.py
